--- a/index.htm
+++ b/index.htm
@@ -6,9 +6,7 @@
 	<link rel="stylesheet" href="home.css">
 </head>
 <body>
-	<div class="wrapper">
-	    <svg class="chart"></svg>
-	</div>
+	<svg></svg>
 	<script src="chart.js"></script>
 </body>
 </html>
