--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SVG-chart</title>
-	<link rel="stylesheet" href="home.css">
+	<link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 	<svg></svg>
-	<script src="chart.js"></script>
+	<script src="js/chart.js"></script>
 </body>
 </html>
